ops/envoy/envoy.yaml
static_resources:
  listeners:
    - name: http_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                use_remote_address: true
                upgrade_configs:
                  - upgrade_type: websocket
                route_config:
                  name: search_agent_routes
                  virtual_hosts:
                    - name: search_agent
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: /api/
                          route:
                            cluster: api_service
                            timeout: 60s
                        - match:
                            prefix: /admin/
                          route:
                            cluster: api_service
                            timeout: 60s
                        - match:
                            prefix: /static/
                          route:
                            cluster: api_service
                            timeout: 60s
                        - match:
                            prefix: /media/
                          route:
                            cluster: api_service
                            timeout: 60s
                        - match:
                            prefix: /grafana/
                          route:
                            cluster: grafana_service
                            timeout: 60s
                        - match:
                            prefix: /grafana
                          redirect:
                            path_redirect: /grafana/
                        - match:
                            prefix: /prometheus/
                          route:
                            cluster: prometheus_service
                            timeout: 60s
                        - match:
                            prefix: /prometheus
                          redirect:
                            path_redirect: /prometheus/
                        - match:
                            prefix: /alertmanager/
                          route:
                            cluster: alertmanager_service
                            timeout: 60s
                        - match:
                            prefix: /alertmanager
                          redirect:
                            path_redirect: /alertmanager/
                        - match:
                            prefix: /
                          route:
                            cluster: ui_service
                            timeout: 0s
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: ui_service
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: ui_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ui
                      port_value: 8077

    - name: api_service
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: api_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: api
                      port_value: 5000

    - name: grafana_service
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: grafana_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
                      port_value: 80

    - name: prometheus_service
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: prometheus_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: kube-prometheus-stack-prometheus.monitoring.svc.cluster.local
                      port_value: 9090

    - name: alertmanager_service
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: alertmanager_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: kube-prometheus-stack-alertmanager.monitoring.svc.cluster.local
                      port_value: 9093
